--- a/contact.html
+++ b/contact.html
@@ -39,7 +39,7 @@
                 </ul>
               </li>
 
-              <li class="nav-item">
+              <li class="nav-item active">
                 <a class="nav-link" href="/iFooderBootstrap/contact.html">Contact Us</a>
               </li>
      
