--- a/about.html
+++ b/about.html
@@ -20,10 +20,10 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
              <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="/iFooderBootstrap/">Home</a>
+                <a class="nav-link" aria-current="page" href="/iFooderBootstrap/">Home</a>
               </li>
-              <li class="nav-item active">
-                <a class="nav-link" href="/iFooderBootstrap/about.html">About</a>
+              <li class="nav-item">
+                <a class="nav-link active" href="/iFooderBootstrap/about.html">About</a>
               </li>
              
 
