--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="/iFooderBootstrap/">Home</a>
+                <a class="nav-link active" aria-current="page" href="/iFooderBootstrap/">Home</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="/iFooderBootstrap/about.html">About</a>
@@ -40,7 +40,7 @@
               </li>
 
               <li class="nav-item">
-                <a class="nav-link active" href="/iFooderBootstrap/contact.html">Contact Us</a>
+                <a class="nav-link" href="/iFooderBootstrap/contact.html">Contact Us</a>
               </li>
      
               
