--- a/contact.html
+++ b/contact.html
@@ -39,8 +39,8 @@
                 </ul>
               </li>
 
-              <li class="nav-item active">
-                <a class="nav-link" href="/iFooderBootstrap/contact.html">Contact Us</a>
+              <li class="nav-item">
+                <a class="nav-link active" href="/iFooderBootstrap/contact.html">Contact Us</a>
               </li>
      
               
